--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         </div>
         
         <h1 class="brand-title">Project Atlas</h1>
-        <p class="tagline">A new era of performance intelligence is on the horizon. Prepare to go beyond the limitations of legacy models and unlock what's next.</p>
+        <p class="tagline">Clarity in Complexity. A new era of performance intelligence for the modern marketer.</p>
         <div class="button-group">
           <button class="cta-button" data-modal="overview">Learn more</button>
         </div>
@@ -591,3 +591,4 @@
     </script>
 </body>
 </html>
+
